tests/pos/namespace/test.stk
namespace test

type A = Int

type List[T] = #Nil | #Cons(head: T, tail: List[T])

def double(n: A): A = n + n

def id[T](a: T): T = a
