tests/neg/namespace/test.stk
namespace test

type A = Int

type List[T] = <Nil, Cons(head: T, tail: List[T])>

fun double(n: A): A = n + n
